# tiny-cats-model

./: .flake8  .gitattributes  .gitignore  .modalignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  HF_UPLOAD_REPORT.md  LICENSE  Makefile  README.md  SECURITY.md  benchmark_report.json  evaluation_report.json  modal.yml  opencode.json  package.json  playwright.config.ts  pyproject.toml  requirements-modal.txt  requirements.txt  ruff.toml  skills-lock.json  validation_report.json
.github/: actionlint.yaml  dependabot.yml
agents-docs/: auth-troubleshooting.md  ci-cd.md  learnings.md  security.md  skills.md  training.md
configs/: train_config.yaml
data/: download.py  download.sh
docs/: ERROR_HANDLING_CHANGES.md  GOAP_IMPLEMENTATION_SUMMARY.md  HF_TOKEN_SETUP.md  MODAL-TRAINING-VERIFICATION-REPORT.md  MONITORING.md  TRAINING_400K_LOG.md  TUTORIAL_VIDEO_OUTLINE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
notebooks/: 01_quickstart_classification.ipynb  02_conditional_generation.ipynb  03_training_fine_tuning.ipynb  README.md  exploration.ipynb
plans/: ADR-001-agent-skill-structure.md  ADR-002-ci-workflow-optimization.md  ADR-003-agents-md-structure.md  ADR-004-frontend-cat-model-update.md  ADR-005-ci-pipeline-fixes.md  ADR-006-ci-fix-workflow.md  ADR-007-modal-training-fix.md  ADR-008-adapt-tiny-models-architecture-for-cats-classifier-with-web-frontend.md  ADR-009-ci-test-coverage-fix.md  ADR-010-modal-training-improvements.md  ADR-011-modal-container-dependencies.md  ADR-012-flake8-linting-fixes.md  ADR-013-github-actions-workflow-optimization-2026.md  ADR-014-quality-gate-ci-alignment.md  ADR-015-github-workflow-caching-issue.md  ADR-016-modern-python-code-quality-2026.md  ADR-017-tinydit-training-infrastructure.md  ADR-018-typescript-5.8-upgrade.md  ADR-019-tinydit-sample-evaluation-results.md  ADR-020-modal-cli-first-training-strategy.md  ADR-021-huggingface-model-publishing.md  ADR-021-training-verification-and-frontend-integration.md  ADR-022-modal-container-image-optimization.md  ADR-023-modal-gpu-retry-strategy.md  ADR-024-modal-volume-storage.md  ADR-025-modal-cold-start-optimization.md  ADR-026-huggingface-model-publishing-implementation.md  ADR-027-experiment-tracking-mlflow.md  ADR-028-model-validation-gates.md  ADR-029-production-deployment-goap-2026.md  ADR-030-modal-container-python-path-fix.md  ADR-031-modal-container-download-scripts-fix.md  ADR-032-pytorch-210-amp-api-migration.md  ADR-033-codebase-analysis-missing-implementations.md  ADR-034-HuggingFace-Model-Loading.md  (+36 more)
(+120 files in other folders)
